--- a/public/cssExc/cssExcPosition5.html
+++ b/public/cssExc/cssExcPosition5.html
@@ -15,11 +15,9 @@
 	
 	#bbb{
 	
-		width: 100px;
-		height: 100px;
+		
 		background-color: blue;
-		position:absolute;
-		top:300px; 
+		top:500px; 
 	
 	}
 	#ccc{
@@ -30,6 +28,13 @@
 	
 	
 	}
+	#ddd{
+		background-color: orange;
+		position: relative;
+		top:300px;
+		left:100px;
+		
+	}
 	
 
 
@@ -37,11 +42,12 @@
 </head>
 
 <body>
-	
-	<div id="aaa">승태</div>
-	<div id="bbb">승준</div>
-	<div id="ccc">수환</div>
-	
+
+	<div id="ddd">
+		<div id="aaa">승태</div>
+		<div id="bbb">승준</div>
+		<div id="ccc">수환</div>
+	</div>	
 
 
 </body>
